[package]
name = "quantum"
version = "0.1.1"
edition = "2021"
authors = ["Artur Gwoździowski <gwozdyk@gmain.com>"]
keywords = ["physics", "sandbox", "simulation", "particles", "emergent"]



[dependencies]
macroquad = "0.4.4"
rapier2d = { version = "0.17.2", features = [ "simd-stable" ] }
serde_json = "1.0.107"
serde = "1.0.188"

[build-dependencies]
embed-resource = "2.3.0"
