[package]
name = "quantum"
version = "0.1.2"
edition = "2021"
authors = ["Artur Gwoździowski <gwozdyk@gmain.com>"]
keywords = ["physics", "sandbox", "simulation", "particles", "emergent"]



[dependencies]
macroquad = "0.3.26"
rapier2d = { version = "0.17.2", features = [ "simd-stable" ] }
serde_json = "1.0.107"
serde = "1.0.188"
crossbeam = "0.8.2"
egui-macroquad = {version = "0.15.0"}

[build-dependencies]
embed-resource = "2.3.0"
